--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ plugins:
   - jekyll-feed
 
 collections:
-  - gallery
+  - gall
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
