--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ plugins:
   - jekyll-feed
 
 collections:
-  - gall
+  - photo_gallery
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
